--- a/src/components/Main/Works/WorkStyles.css
+++ b/src/components/Main/Works/WorkStyles.css
@@ -1,7 +1,6 @@
 .Work {
-    height: 100vh;
-    /* height: auto; */
-    background-color: #ddd6fe;
+    padding-bottom: 100px;
+    background-color: #DCE7FC;
     justify-content: center;
 }
 
@@ -10,7 +9,7 @@
     padding-top: 70px;
     display: flex;
     justify-content: center;
-    transition: height 1s, transform 1s;
+
 }
 
 
@@ -21,6 +20,7 @@
     display: flex;
     justify-content: center;
     font-size: 4rem;
+    padding-bottom: 70px;
 }
 
 
@@ -39,7 +39,7 @@
 .WorkItem {
     width: 510px;
     height: 270px;
-    border: 7px solid #fefaf6;
+    border: 7px solid #8a7c6e3b;
     border-radius: 0.25rem;
     transition: all .1s ease;
 }
@@ -102,8 +102,8 @@
     width: 510px;
     height: 270px;
     text-align: center;
-    background-color: rgba(228, 220, 220, 0.55);
-    backdrop-filter: blur(5px);
+    background-color: rgba(27, 17, 17, 0.80);
+    backdrop-filter: blur(15px);
     z-index: 1;
     opacity: 0;
     animation: hoverOut .3s ease-in-out alternate backwards;
@@ -119,16 +119,36 @@
 .Hover h4 {
     font-size: 2rem;
     opacity: 1;
-    color: black;
+    color: white;
     z-index: 5;
+    font-weight: 100;
+    margin: 20px 0 0 0;
+    /* padding: 20px 0 0 0 ; */
+}
+
+.Hover p {
+    color: #FFFFFF;
+    /* background-color:; */
+    padding: 5px 10px;
+    min-width: 40px;
+    border: 1px solid white;
+    border-radius: 15px;
+}
+
+.WorkTech {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    column-gap: 20px;
 }
 
 .WorkBtn {
     z-index: 5;
     display: flex;
     column-gap: 20px;
-    margin-top: -100px;
+    margin-top: 15px;
     opacity: 1;
+    align-items: center;
     justify-content: center;
 }
 
@@ -150,10 +170,19 @@
 
     .Work {
         height: auto;
+        padding-bottom: 100px;
+    }
+
+    .WorkGrid {
+        padding-top: 40px;
+        display: flex;
+        justify-content: center;
+    
     }
 
     .WorkHeader h2 {
         font-size: 2.5rem;
+        padding-bottom: 34px;
     }
       
     .Hover {
@@ -163,7 +192,8 @@
     }
 
     .Hover h4 {
-        font-size: 1.3rem;
+        font-size: 1.5rem;
+        padding-top: 20px;
     }
 
     .WorkItem {
@@ -176,63 +206,68 @@
         height: 164px;
     }
 
-    .WorkBtn {
-        margin-top: -50px;
+    .button-27 span {
+        font-size: 0.8rem;
     }
 
-    .WorkBtn button {
-        height: 40px;
-    }
+ .WorkBtn {
+    margin-bottom: 20px;
+ }
 
+ .button-27 {
+    padding-bottom: 2.5px;
+ }
+ 
+ .ImgText {
+    position: relative;
+    bottom: 42px;
+    left: 239px;
+    width: fit-content;
+ }
 
+ .ImgText p {
+    width: fit-content;
+ }
 
-   
 }
 
-
-
-.button-75 {
-    align-items: center;
-    background-image: linear-gradient(135deg, #f34079 40%, #fc894d);
-    border: 0;
-    border-radius: 10px;
-    box-sizing: border-box;
-    color: #fff;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    font-family: "Codec cold", sans-serif;
-    font-size: 16px;
-    font-weight: 700;
-    height: 54px;
-    justify-content: center;
-    letter-spacing: .4px;
-    line-height: 1;
-    max-width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 3px;
-    text-decoration: none;
-    text-transform: uppercase;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
+/* CSS */
+.button-27 {
+  appearance: none;
+  background-color: #000000;
+  border: 2px solid #1A1A1A;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 40px;
+  width: 100px;
+  outline: none;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
 }
 
-.button-75:active {
-    outline: 0;
+.button-27:disabled {
+  pointer-events: none;
 }
 
-.button-75:hover {
-    outline: 0;
+.button-27:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
 }
 
-.button-75 span {
-    transition: all 200ms;
+.button-27:active {
+  box-shadow: none;
+  transform: translateY(0);
 }
-
-.button-75:hover span {
-    transform: scale(.9);
-    opacity: .75;
-}
-
