--- a/src/components/Main/Works/WorkStyles.css
+++ b/src/components/Main/Works/WorkStyles.css
@@ -1,12 +1,12 @@
 .Work {
-    padding-bottom: 100px;
+    padding: 20px 0 100px 0;
     background-color: #DCE7FC;
     justify-content: center;
 }
 
 
 .WorkGrid {
-    padding-top: 70px;
+    margin-top: -20px;
     display: flex;
     justify-content: center;
 
@@ -21,6 +21,7 @@
     justify-content: center;
     font-size: 4rem;
     padding-bottom: 70px;
+    color: #1f0542;
 }
 
 
@@ -31,6 +32,7 @@
     justify-content: center;
     column-gap: 50px;
     row-gap: 50px;
+    z-index: 10;
 }
 
 
@@ -42,6 +44,7 @@
     border: 7px solid #8a7c6e3b;
     border-radius: 0.25rem;
     transition: all .1s ease;
+    z-index: 10;
 }
 
 
@@ -50,11 +53,12 @@
     width: 510px;
     height: 270px;
     border-radius: 0.25rem;
+    z-index: 10;
 }
 
 .WorkItem:hover .Hover {
     animation: hoverIn .3s ease-in-out alternate forwards;
-
+    z-index: 10;
 }
 
 
@@ -166,11 +170,12 @@
 
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
 
     .Work {
         height: auto;
         padding-bottom: 100px;
+        padding-top: 0;
     }
 
     .WorkGrid {
