Added new works

--- a/src/components/ChatBot/ChatBoot.css
+++ b/src/components/ChatBot/ChatBoot.css
@@ -1,233 +1,1 @@
-.ChatBot {
-
-    position: fixed;
-    bottom: 40px;
-    right: 40px;
-    width: 355px;
-    height: 600px;
-    z-index: 1000;
-    background-color: #ffffff;
-    border-radius: 6px;
-    box-shadow: 0 0 0 1px rgb(0 0 0 / 5%), 0 5px 30px 0 rgb(0 0 0 / 15%), 0 3px 3px 0 rgb(0 0 0 / 5%);
-}
-
-
-
-.ChatHeader {
-    display: flex;
-    align-items: center;
-    text-align: left;
-    height: 35px;
-    padding: 22px;
-    background-color: #222222;
-    border-radius: 6px 6px 0 0;
-    color: #ffffff;
-}
-
-.ChatHeaderText {
-    width: fit-content;
-    line-height: 0;
-    width: 80%;
-    padding-left: 25px;
-    padding-bottom: 5px;
-}
-
-.ChatHeaderText h4 {
-    font-weight: 400;
-}
-
-.ChatHeaderText p {
-    font-size: 0.8rem;
-    opacity: 0.8;
-    font-weight: 100;
-}
-
-.ChatHeader img {
-    width: 35px;
-    height: 35px;
-    border: 2px solid #fff;
-    border-radius: 100%;
-}
-
-.Chat {
-    padding: 20px 20px 0 20px;
-    height: 500px;
-    overflow-x: hidden;
-    overflow-y: auto;
-}
-
-.StillChat form {
-    display: inline-block;
-}
-
-.StillChat form input,
-.StillChat form textarea {
-    display: block;
-    border-radius: 3px;
-    box-sizing: border-box;
-    background-color: #1f2022;
-    box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1);
-    border: none;
-    resize: none;
-    font: inherit;
-    font-size: 14px;
-    font-weight: normal;
-    color: #d1d2d2;
-    width: 100%;
-    padding: 18px;
-}
-
-.StillChat ::-webkit-input-placeholder {
-    color: #5c666b;
-}
-
-.StillChat ::-moz-placeholder {
-    color: #5c666b;
-    opacity: 1;
-}
-
-.StillChat :-ms-input-placeholder {
-    color: #5c666b;
-}
-
-
-.StillChat form input {
-    height: 55px;
-    margin-bottom: 15px;
-}
-
-.StillChat form textarea {
-    margin-bottom: 20px;
-}
-
-.FormBtn {
-    border-radius: 3px;
-    background-color: #33383b;
-    color: #ffffff;
-    border: 0;
-    padding: 15px 50px;
-    font-weight: bold;
-    float: right;
-}
-
-.button-27 {
-    appearance: none;
-    background-color: #000000;
-    border: 2px solid #1A1A1A;
-    border-radius: 15px;
-    box-sizing: border-box;
-    color: #FFFFFF;
-    cursor: pointer;
-    display: inline-block;
-    font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-    font-size: 16px;
-    font-weight: 600;
-    line-height: normal;
-    margin: 0;
-    min-height: 40px;
-    width: 100px;
-    outline: none;
-    text-align: center;
-    text-decoration: none;
-    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    will-change: transform;
-  }
-  
-  .button-27:disabled {
-    pointer-events: none;
-  }
-  
-  .button-27:hover {
-    box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-    transform: translateY(-2px);
-  }
-  
-  .button-27:active {
-    box-shadow: none;
-    transform: translateY(0);
-  }
-
-.StillChat {
-    display: grid;
-    margin-bottom: 20px;
-    row-gap: 5px;
-}
-
-.StillChat .bot {
-    margin: 2px;
-    border: 1px solid rgb(34, 34, 34, .50);
-    border-radius: 10px;
-    padding: 15px;
-    width: fit-content;
-    justify-self: left;
-    row-gap: 0;
-}
-
-.StillChat .ans {
-    margin: 2px;
-    color: #ffffff;
-    background-color:  rgb(34, 34, 34);
-    border-radius: 10px;
-    padding: 15px;
-    width: fit-content;
-    justify-self: right;
-}
-
-.ChatOptions {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.ChatOptions p {
-    margin: 6px;
-    /* border: 1px solid rgb(34, 34, 34, .50); */
-    background-color: rgb(210, 255, 220, .50);
-    border-radius: 20px;
-    padding: 15px 25px;
-    width: 200px;
-}
-
-.ChatOptions :hover {
-    background-color: rgb(36, 182, 68, .5);
-}
-
-
-.chatExit {
-    display: flex;
-    width: 40px;
-    height: 30px;
-    align-items: center;
-    justify-content: center;
-    border: 0;
-    transition: all .2s ease-in-out;
-    border-radius: 6px;
-
-}
-
-.ChatHeader .chatExit:hover {
-
-    background-color: rgba(255, 255, 255, 0.397);
-
-
-}
-
-@media screen and (max-width: 600px) {
-    .ChatBot {
-        position: fixed;
-        top: 0;
-        left: 0;
-        bottom: 0px;
-        right: 0px;
-        width: 100%;
-        height: 100vh;
-        z-index: 1000;
-    }
-
-    .Chat {
-        height: 80vh;
-    }
-}
+.ChatBot{position:fixed;bottom:40px;right:40px;width:355px;height:600px;z-index:1000;background-color:#fff;border-radius:6px;box-shadow:0 0 0 1px rgb(0 0 0 / 5%),0 5px 30px 0 rgb(0 0 0 / 15%),0 3px 3px 0 rgb(0 0 0 / 5%)}.ChatHeader{display:flex;align-items:center;text-align:left;height:35px;padding:22px;background-color:#222;border-radius:6px 6px 0 0;color:#fff}.ChatHeaderText{width:fit-content;line-height:0;width:80%;padding-left:25px;padding-bottom:5px}.ChatHeaderText h4{font-weight:400}.ChatHeaderText p{font-size:.8rem;opacity:.8;font-weight:100}.ChatHeader img{width:35px;height:35px;border:2px solid #fff;border-radius:100%}.Chat{padding:20px 20px 0 20px;height:500px;overflow-x:hidden;overflow-y:auto}.StillChat form{display:inline-block}.StillChat form input,.StillChat form textarea{display:block;border-radius:3px;box-sizing:border-box;background-color:#1f2022;box-shadow:0 1px 0 0 rgba(255,255,255,.1);border:none;resize:none;font:inherit;font-size:14px;font-weight:400;color:#d1d2d2;width:100%;padding:18px}.StillChat ::-webkit-input-placeholder{color:#5c666b}.StillChat ::-moz-placeholder{color:#5c666b;opacity:1}.StillChat :-ms-input-placeholder{color:#5c666b}.StillChat form input{height:55px;margin-bottom:15px}.StillChat form textarea{margin-bottom:20px}.FormBtn{border-radius:3px;background-color:#33383b;color:#fff;border:0;padding:15px 50px;font-weight:700;float:right}.button-27{appearance:none;background-color:#000;border:2px solid #1A1A1A;border-radius:15px;box-sizing:border-box;color:#FFF;cursor:pointer;display:inline-block;font-family:Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";font-size:16px;font-weight:600;line-height:normal;margin:0;min-height:40px;width:100px;outline:none;text-align:center;text-decoration:none;transition:all 300ms cubic-bezier(.23,1,.32,1);user-select:none;-webkit-user-select:none;touch-action:manipulation;will-change:transform}.button-27:disabled{pointer-events:none}.button-27:hover{box-shadow:rgba(0,0,0,.25) 0 8px 15px;transform:translateY(-2px)}.button-27:active{box-shadow:none;transform:translateY(0)}.StillChat{display:grid;margin-bottom:20px;row-gap:5px}.StillChat .bot{margin:2px;border:1px solid rgb(34,34,34,.50);border-radius:10px;padding:15px;width:fit-content;justify-self:left;row-gap:0}.StillChat .ans{margin:2px;color:#fff;background-color:rgb(34,34,34);border-radius:10px;padding:15px;width:fit-content;justify-self:right}.ChatOptions{display:flex;flex-wrap:wrap;justify-content:center}.ChatOptions p{margin:6px;background-color:rgb(210,255,220,.50);border-radius:20px;padding:15px 25px;width:200px}.ChatOptions :hover{background-color:rgb(36,182,68,.5)}.chatExit{display:flex;width:40px;height:30px;align-items:center;justify-content:center;border:0;transition:all .2s ease-in-out;border-radius:6px}.ChatHeader .chatExit:hover{background-color:rgba(255,255,255,.397)}@media screen and (max-width:600px){.ChatBot{position:fixed;top:0;left:0;bottom:0;right:0;width:100%;height:100vh;z-index:1000}.Chat{height:80vh}}
