--- a/src/components/Main/Works/WorkStyles.css
+++ b/src/components/Main/Works/WorkStyles.css
@@ -1,278 +1,1 @@
-.Work {
-    padding: 20px 0 100px 0;
-    background-color: #DCE7FC;
-    justify-content: center;
-}
-
-
-.WorkGrid {
-    margin-top: -20px;
-    display: flex;
-    justify-content: center;
-
-}
-
-
-
-
-.WorkHeader h2 {
-    font-family: 'Gideon Roman', cursive;
-    display: flex;
-    justify-content: center;
-    font-size: 4rem;
-    padding-bottom: 70px;
-    color: #1f0542;
-}
-
-
-.WorkItems {
-    margin: 0 120px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    column-gap: 50px;
-    row-gap: 50px;
-    z-index: 10;
-}
-
-
-
-
-.WorkItem {
-    width: 510px;
-    height: 270px;
-    border: 7px solid #8a7c6e3b;
-    border-radius: 0.25rem;
-    transition: all .1s ease;
-    z-index: 10;
-}
-
-
-
-.WorkImg img {
-    width: 510px;
-    height: 270px;
-    border-radius: 0.25rem;
-    z-index: 10;
-}
-
-.WorkItem:hover .Hover {
-    animation: hoverIn .3s ease-in-out alternate forwards;
-    z-index: 10;
-}
-
-
-@keyframes hoverIn {
-
-    from {
-
-        opacity: 0;
-        border-radius: 100%;
-        transform: scale(0);
-    }
-
-
-    to {
-        border-radius: 0.25rem;
-        opacity: 1;
-        transform: scale(1);
-    }
-
-}
-
-
-@keyframes hoverOut {
-
-    from {
-
-        border-radius: 0.25rem;
-        opacity: 1;
-        transform: scale(1);
-    }
-
-
-    to {
-        opacity: 0;
-        border-radius: 100%;
-        transform: scale(0);
-    }
-}
-
-.Hover {
-    position: absolute;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    width: 510px;
-    height: 270px;
-    text-align: center;
-    background-color: rgba(27, 17, 17, 0.80);
-    backdrop-filter: blur(15px);
-    z-index: 1;
-    opacity: 0;
-    animation: hoverOut .3s ease-in-out alternate backwards;
-}
-
-
-
-
-.Hover a {
-    text-decoration: none;
-}
-
-.Hover h4 {
-    font-size: 2rem;
-    opacity: 1;
-    color: white;
-    z-index: 5;
-    font-weight: 100;
-    margin: 20px 0 0 0;
-    /* padding: 20px 0 0 0 ; */
-}
-
-.Hover p {
-    color: #FFFFFF;
-    /* background-color:; */
-    padding: 5px 10px;
-    min-width: 40px;
-    border: 1px solid white;
-    border-radius: 15px;
-}
-
-.WorkTech {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    column-gap: 20px;
-}
-
-.WorkBtn {
-    z-index: 5;
-    display: flex;
-    column-gap: 20px;
-    margin-top: 15px;
-    opacity: 1;
-    align-items: center;
-    justify-content: center;
-}
-
-
-
-
-
-@media screen and (max-width: 1331px) {
-
-    .WorkItems {
-        margin: 0 40px;
-    }
-  
-
-
-}
-
-@media screen and (max-width: 700px) {
-
-    .Work {
-        height: auto;
-        padding-bottom: 100px;
-        padding-top: 0;
-    }
-
-    .WorkGrid {
-        padding-top: 40px;
-        display: flex;
-        justify-content: center;
-    
-    }
-
-    .WorkHeader h2 {
-        font-size: 2.5rem;
-        padding-bottom: 34px;
-    }
-      
-    .Hover {
-        width: 310px;
-        height: 164px;
-
-    }
-
-    .Hover h4 {
-        font-size: 1.5rem;
-        padding-top: 20px;
-    }
-
-    .WorkItem {
-        width: 310px;
-        height: 164px;
-    }
-
-    .WorkImg img {
-        width: 310px;
-        height: 164px;
-    }
-
-    .button-27 span {
-        font-size: 0.8rem;
-    }
-
- .WorkBtn {
-    margin-bottom: 20px;
- }
-
- .button-27 {
-    padding-bottom: 2.5px;
- }
- 
- .ImgText {
-    position: relative;
-    bottom: 42px;
-    left: 239px;
-    width: fit-content;
- }
-
- .ImgText p {
-    width: fit-content;
- }
-
-}
-
-/* CSS */
-.button-27 {
-  appearance: none;
-  background-color: #000000;
-  border: 2px solid #1A1A1A;
-  border-radius: 15px;
-  box-sizing: border-box;
-  color: #FFFFFF;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  font-size: 16px;
-  font-weight: 600;
-  line-height: normal;
-  margin: 0;
-  min-height: 40px;
-  width: 100px;
-  outline: none;
-  text-align: center;
-  text-decoration: none;
-  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  will-change: transform;
-}
-
-.button-27:disabled {
-  pointer-events: none;
-}
-
-.button-27:hover {
-  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-  transform: translateY(-2px);
-}
-
-.button-27:active {
-  box-shadow: none;
-  transform: translateY(0);
-}
+.Work{padding:20px 0 100px 0;background-color:#DCE7FC;justify-content:center}.WorkGrid{margin-top:-20px;display:flex;justify-content:center}.WorkHeader h2{font-family:'Gideon Roman',cursive;display:flex;justify-content:center;font-size:4rem;padding-bottom:70px;color:#1f0542}.WorkItems{margin:0 120px;display:flex;flex-wrap:wrap;justify-content:center;column-gap:50px;row-gap:50px;z-index:10}.WorkItem{width:510px;height:270px;border:7px solid #8a7c6e3b;border-radius:.25rem;transition:all .1s ease;z-index:10}.WorkImg img{width:510px;height:270px;border-radius:.25rem;z-index:10}.WorkItem:hover .Hover{animation:hoverIn .3s ease-in-out alternate forwards;z-index:10}@keyframes hoverIn{from{opacity:0;border-radius:100%;transform:scale(0)}to{border-radius:.25rem;opacity:1;transform:scale(1)}}@keyframes hoverOut{from{border-radius:.25rem;opacity:1;transform:scale(1)}to{opacity:0;border-radius:100%;transform:scale(0)}}.Hover{position:absolute;display:grid;justify-content:center;align-items:center;width:510px;height:270px;text-align:center;background-color:rgba(27,17,17,.8);backdrop-filter:blur(15px);z-index:1;opacity:0;animation:hoverOut .3s ease-in-out alternate backwards}.Hover a{text-decoration:none}.Hover h4{font-size:2rem;opacity:1;color:#fff;z-index:5;font-weight:100;margin:20px 0 0 0}.Hover p{color:#FFF;padding:5px 10px;min-width:40px;border:1px solid #fff;border-radius:15px}.WorkTech{display:flex;justify-content:center;text-align:center;column-gap:20px}.WorkBtn{z-index:5;display:flex;column-gap:20px;margin-top:15px;opacity:1;align-items:center;justify-content:center}@media screen and (max-width:1331px){.WorkItems{margin:0 40px}}@media screen and (max-width:700px){.Work{height:auto;padding-bottom:100px;padding-top:0}.WorkGrid{padding-top:40px;display:flex;justify-content:center}.WorkHeader h2{font-size:2.5rem;padding-bottom:34px}.Hover{width:310px;height:164px}.Hover h4{font-size:1.5rem;padding-top:20px}.WorkItem{width:310px;height:164px}.WorkImg img{width:310px;height:164px}.button-27 span{font-size:.8rem}.WorkBtn{margin-bottom:20px}.button-27{padding-bottom:2.5px}.ImgText{position:relative;bottom:42px;left:239px;width:fit-content}.ImgText p{width:fit-content}}.button-27{appearance:none;background-color:#000;border:2px solid #1A1A1A;border-radius:15px;box-sizing:border-box;color:#FFF;cursor:pointer;display:inline-block;font-family:Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";font-size:16px;font-weight:600;line-height:normal;margin:0;min-height:40px;width:100px;outline:none;text-align:center;text-decoration:none;transition:all 300ms cubic-bezier(.23,1,.32,1);user-select:none;-webkit-user-select:none;touch-action:manipulation;will-change:transform}.button-27:disabled{pointer-events:none}.button-27:hover{box-shadow:rgba(0,0,0,.25) 0 8px 15px;transform:translateY(-2px)}.button-27:active{box-shadow:none;transform:translateY(0)}
