--- a/src/components/NavBar/NavStyles/NavBar.css
+++ b/src/components/NavBar/NavStyles/NavBar.css
@@ -1,187 +1,1 @@
-@font-face {
-    font-family: "BiotifRegular";
-    src: local("BiotifRegular"),
-        url("../../../Fonts/Biotif/Biotif-Regular.ttf") format("truetype");
-    font-weight: 500;
-}
-
-
-.NavBar {
-    background-color: transparent;
-    display: flex;
-    width: 100vw;
-    height: 74px;
-    position: fixed;
-    top: 0;
-    justify-content: center;
-    transition: all .5s ease-in-out;
-    z-index: 1000;
-    font-family:"BiotifRegular", Verdana, Geneva, Tahoma, sans-serif;
-}
-
- .colorChange {
-    background-color: #fefaf6;
-    box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
-    transition: all .5s ease-in-out;
-    height: 64px;
-}
-
-.NavList {
-    display: flex;
-    width: 1600px;
-    max-width: 1600px;
-    justify-content: space-between;
-    margin: 0 157px;
-    transition: all .5s ease-in-out;
-}
-
-.NavGridLinks {
-    display: flex;
-    align-items: center;
-    column-gap: 84px;
-    height: 100%;
-    width: fit-content;
-    transition: all .5s ease-in-out;
-}
-
-.NavSocialList {
-    display: flex;
-    align-items: center;
-    column-gap: 104px;
-    height: 100%;
-    width: fit-content;
-    transition: all .5s ease-in-out;
-
-}
-
-.NavLogo img {
-    width: 100px;
-}
-
-
-.NavLogo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-}
-
-
-@media screen and (max-width: 1400px) {
-
-
-    .NavGridLinks {
-        column-gap: 44px;
-        transition: all .5s ease-in-out;
-    }
-
-    .NavSocialList {
-        column-gap: 44px;
-        transition: all .5s ease-in-out;
-    }
-
-    .NavLogo img {
-        position: none;
-        width: 100px;
-    }
-
-}
-
-@media screen and (max-width: 900px) {
-
-    .NavList {
-        width: 900px;
-        margin: 0 54px;
-        transition: all .5s ease-in-out;
-    }
-
-    .NavGridLinks {
-        column-gap: 34px;
-        transition: all .5s ease-in-out;
-    }
-
-    .NavSocialList {
-        column-gap: 34px;
-        transition: all .5s ease-in-out;
-    }
-
-    .NavLogo img {
-        width: 80px;
-        transition: all .5s ease-in-out;
-    }
-
-}
-
-@media screen and (max-width: 800px) {
-    .NavList {
-        width: 800px;
-        margin: 0 44px;
-        transition: all .5s ease-in-out;
-    }
-
-    .NavGridLinks {
-        column-gap: 24px;
-        transition: all .5s ease-in-out;
-    }
-
-    .NavSocialList {
-        column-gap: 24px;
-        transition: all .5s ease-in-out;
-    }
-
-
-}
-
-@media screen and (max-width: 500px) {
-
-
-    .NavList {
-        width: 800px;
-        margin: 0 24px;
-        transition: all .5s ease-in-out;
-    }
-
-    .NavGridLinks {
-        column-gap: 14px;
-        transition: all .5s ease-in-out;
-    }
-
-    .NavSocialList {
-        column-gap: 14px;
-        transition: all .5s ease-in-out;
-    }
-
-    .NavLogo img {
-        width: 70px;
-    }
-
-}
-
-
-
-
-
-@media screen and (max-width: 420px) {
-
-    .NavList {
-        width: 800px;
-        margin: 0 24px;
-        transition: all .5s ease-in-out;
-    }
-
-    .NavLogo img {
-        display: none;
-    }
-
-
-    .NavGridLinks {
-        column-gap: 20px;
-        transition: all .5s ease-in-out;
-    }
-
-    .NavSocialList {
-        column-gap: 10px;
-        transition: all .5s ease-in-out;
-    }
-
-}
+@font-face{font-family:"BiotifRegular";src:local("BiotifRegular"),url(../../../Fonts/Biotif/Biotif-Regular.ttf) format("truetype");font-weight:500}.NavBar{background-color:transparent;display:flex;width:100vw;height:74px;position:fixed;top:0;justify-content:center;transition:all .5s ease-in-out;z-index:1000;font-family:"BiotifRegular",Verdana,Geneva,Tahoma,sans-serif}.colorChange{background-color:#fefaf6;box-shadow:0 10px 15px -3px rgba(0,0,0,.1),0 4px 6px -2px rgba(0,0,0,.05);transition:all .5s ease-in-out;height:64px}.NavList{display:flex;width:1600px;max-width:1600px;justify-content:space-between;margin:0 157px;transition:all .5s ease-in-out}.NavGridLinks{display:flex;align-items:center;column-gap:84px;height:100%;width:fit-content;transition:all .5s ease-in-out}.NavSocialList{display:flex;align-items:center;column-gap:104px;height:100%;width:fit-content;transition:all .5s ease-in-out}.NavLogo img{width:100px}.NavLogo{display:flex;justify-content:center;align-items:center}@media screen and (max-width:1400px){.NavGridLinks{column-gap:44px;transition:all .5s ease-in-out}.NavSocialList{column-gap:44px;transition:all .5s ease-in-out}.NavLogo img{position:none;width:100px}}@media screen and (max-width:900px){.NavList{width:900px;margin:0 54px;transition:all .5s ease-in-out}.NavGridLinks{column-gap:34px;transition:all .5s ease-in-out}.NavSocialList{column-gap:34px;transition:all .5s ease-in-out}.NavLogo img{width:80px;transition:all .5s ease-in-out}}@media screen and (max-width:800px){.NavList{width:800px;margin:0 44px;transition:all .5s ease-in-out}.NavGridLinks{column-gap:24px;transition:all .5s ease-in-out}.NavSocialList{column-gap:24px;transition:all .5s ease-in-out}}@media screen and (max-width:500px){.NavList{width:800px;margin:0 24px;transition:all .5s ease-in-out}.NavGridLinks{column-gap:14px;transition:all .5s ease-in-out}.NavSocialList{column-gap:14px;transition:all .5s ease-in-out}.NavLogo img{width:70px}}@media screen and (max-width:420px){.NavList{width:800px;margin:0 24px;transition:all .5s ease-in-out}.NavLogo img{display:none}.NavGridLinks{column-gap:20px;transition:all .5s ease-in-out}.NavSocialList{column-gap:10px;transition:all .5s ease-in-out}}
