--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,1 @@
-.msg {
-    position: fixed;
-    bottom: 40px;
-    right: 40px;
-    font-size: 2rem;
-    z-index: 1000000;
-    background-color: #222222;
-    color: #ffffff;
-    border-radius: 100%;
-    padding: 15px;
-
-}
-
-@media screen and (max-width: 600px) {
-    .msg {
-        bottom: 25px;
-        right: 25px;
-        font-size: 1.5rem;
-        padding: 10px;
-    
-    }
-}
+.msg{position:fixed;bottom:40px;right:40px;font-size:2rem;z-index:1000000;background-color:#222;color:#fff;border-radius:100%;padding:15px}@media screen and (max-width:600px){.msg{bottom:25px;right:25px;font-size:1.5rem;padding:10px}}
